--- a/tests/Common/Common.Tests.csproj
+++ b/tests/Common/Common.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -76,7 +76,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Common.csproj">
+    <ProjectReference Include="..\..\src\Common\Common.csproj">
       <Project>{277404DB-A439-4450-B3A5-186294CDF245}</Project>
       <Name>Common</Name>
     </ProjectReference>
