Added some async report methods and upgraded .net version

--- a/src/AdWords/AdWords.csproj
+++ b/src/AdWords/AdWords.csproj
@@ -10,7 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Google.Api.Ads.AdWords</RootNamespace>
     <AssemblyName>Google.AdWords</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -86,21 +89,24 @@
     <Compile Include="v201402\AdWordsApi.cs" />
     <Compile Include="v201402\AdWordsServiceV201402.cs" />
     <Compile Include="v201402\ReportDefinition.cs" />
-          <Compile Include="AdWordsErrorMessages.Designer.cs">
-            <AutoGen>True</AutoGen>
-            <DesignTime>True</DesignTime>
-            <DependentUpon>AdWordsErrorMessages.resx</DependentUpon>
-            <CustomToolNamespace></CustomToolNamespace>
-          </Compile></ItemGroup>
+    <Compile Include="AdWordsErrorMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AdWordsErrorMessages.resx</DependentUpon>
+      <CustomToolNamespace>
+      </CustomToolNamespace>
+    </Compile>
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-          <EmbeddedResource Include="AdWordsErrorMessages.resx">
-            <Generator>ResXFileCodeGenerator</Generator>
-            <LastGenOutput>AdWordsErrorMessages.Designer.cs</LastGenOutput>
-            <SubType>Designer</SubType>
-          </EmbeddedResource></ItemGroup>
+    <EmbeddedResource Include="AdWordsErrorMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AdWordsErrorMessages.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
