--- a/src/AdWords/App.config
+++ b/src/AdWords/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler"/>
@@ -55,14 +55,14 @@
          run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
          config file.
     -->
-    <add key="AuthorizationMethod" value="OAuth2" />
+    <add key="AuthorizationMethod" value="OAuth2"/>
     <!-- Provide the OAuth2 client ID and secret. You can create one from
          https://code.google.com/apis/console/. See
          https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
          for more details.
     -->
-    <add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" />
-    <add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" />
+    <add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE"/>
+    <add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE"/>
 
     <!-- The following OAuth2 settings are optional. -->
     <!-- Provide a different OAuth2 scope if required. Multiple scopes should be
@@ -72,7 +72,7 @@
     <!-- Use the following keys if you want to use Web / Installed application
          OAuth flow.-->
 
-    <add key="OAuth2Mode" value="APPLICATION" />
+    <add key="OAuth2Mode" value="APPLICATION"/>
     <!-- If you are using a single MCC account's credentials to make calls to
          all your accounts, then you can run OAuth2TokenGenerator.cs to generate
          a RefreshToken for that account and set this key in your application's
@@ -81,7 +81,7 @@
          set this key at runtime. See OAuth folder under Examples folder for a
          web and a console application example.
     -->
-    <add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" />
+    <add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE"/>
 
     <!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
@@ -125,49 +125,36 @@
   <system.web>
     <webServices>
       <soapExtensionTypes>
-        <add type="Google.Api.Ads.Common.Lib.SoapListenerExtension, Google.Ads.Common"
-             priority="1" group="0"/>
+        <add type="Google.Api.Ads.Common.Lib.SoapListenerExtension, Google.Ads.Common" priority="1" group="0"/>
       </soapExtensionTypes>
     </webServices>
   </system.web>
   <system.net>
     <settings>
-      <httpWebRequest maximumErrorResponseLength="-1"  />
+      <httpWebRequest maximumErrorResponseLength="-1"/>
     </settings>
   </system.net>
   <system.diagnostics>
     <sources>
-      <source name="AdsClientLibs.DeprecationMessages"
-        switchName="AdsClientLibs.DeprecationMessages"
-        switchType="System.Diagnostics.SourceSwitch">
+      <source name="AdsClientLibs.DeprecationMessages" switchName="AdsClientLibs.DeprecationMessages" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="myListener"
-            type="System.Diagnostics.EventLogTraceListener"
-            initializeData="Application" />
+          <add name="myListener" type="System.Diagnostics.EventLogTraceListener" initializeData="Application"/>
         </listeners>
       </source>
-      <source name="AdsClientLibs.SoapXmlLogs"
-        switchName="AdsClientLibs.SoapXmlLogs"
-        switchType="System.Diagnostics.SourceSwitch">
+      <source name="AdsClientLibs.SoapXmlLogs" switchName="AdsClientLibs.SoapXmlLogs" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <!-- Modify the initializeData attribute below to control the
                 path to the SOAP XML log file. -->
-          <add name="soapXmlLogListener"
-            type="System.Diagnostics.TextWriterTraceListener"
-            initializeData="C:\Logs\soap_xml.log" />
-          <remove name="Default" />
+          <add name="soapXmlLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\soap_xml.log"/>
+          <remove name="Default"/>
         </listeners>
       </source>
-      <source name="AdsClientLibs.RequestInfoLogs"
-        switchName="AdsClientLibs.RequestInfoLogs"
-        switchType="System.Diagnostics.SourceSwitch">
+      <source name="AdsClientLibs.RequestInfoLogs" switchName="AdsClientLibs.RequestInfoLogs" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <!-- Modify the initializeData attribute below to control the
                 path to the request info log file. -->
-          <add name="requestInfoLogListener"
-            type="System.Diagnostics.TextWriterTraceListener"
-            initializeData="C:\Logs\request_info.log" />
-          <remove name="Default" />
+          <add name="requestInfoLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\request_info.log"/>
+          <remove name="Default"/>
         </listeners>
       </source>
     </sources>
@@ -187,6 +174,6 @@
           generated at both the Error and Information levels. -->
       <add name="AdsClientLibs.RequestInfoLogs" value="Off"/>
     </switches>
-    <trace autoflush="true" />
+    <trace autoflush="true"/>
   </system.diagnostics>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
